--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,4 @@
-@import "../public/font/css/ibm-plex.css";
+@import "../public/font/css/ibm-plex-reduced.css";
 @import "./theme.scss";
 @import "./breakpoints.scss";
 
@@ -14,6 +14,12 @@
   transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow;
   transition-timing-function: ease-out;
   transition-duration: 150ms;
+}
+
+.no-transitions *,
+.no-transitions *::before,
+.no-transitions *::after {
+  transition-property: none !important;
 }
 
 body {
