--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -7,10 +7,9 @@
   /* === Color theme ======================================================== */
   --bg: hsl(0, 0%, 100%);
   --bg-o75: hsla(0, 0%, 100%, 0.75);
-  --text: hsla(220, 50%, 8%, 0.9);
-  --text-light: hsla(205, 32%, 8%, 0.65);
-  --a700: hsl(220, 91%, 56%);
-  --a300: hsl(195, 100%, 58%);
+  --text: hsla(235, 50%, 8%, 0.9);
+  --text-light: hsla(215, 32%, 8%, 0.72);
+  --a500: hsla(25, 90%, 30%, 0.95);
   --h100: hsl(205, 22%, 92%);
   --h300: hsl(205, 22%, 82%);
 
@@ -45,14 +44,13 @@
 
 :root.dark {
   /* === Color theme ======================================================== */
-  --bg: hsl(220, 22%, 8%);
-  --bg-o75: hsla(220, 22%, 8%, 0.75);
+  --bg: hsl(235, 22%, 8%);
+  --bg-o75: hsla(235, 22%, 8%, 0.75);
   --text: hsla(0, 0%, 100%, 0.95);
-  --text-light: hsla(0, 0%, 100%, 0.72);
-  --a700: hsl(220, 91%, 56%);
-  --a300: hsl(195, 100%, 58%);
-  --h100: hsl(205, 22%, 16%);
-  --h300: hsl(200, 16%, 28%);
+  --text-light: hsla(0, 0%, 100%, 0.77);
+  --a500: hsla(40, 85%, 55%, 0.95);
+  --h100: hsl(220, 22%, 16%);
+  --h300: hsl(215, 34%, 28%);
 }
 
 :root.serif {
