--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -46,12 +46,14 @@ h1 {
   font-size: var(--text-xxl);
   line-height: 1;
   letter-spacing: -0.03em;
+  margin: 0.75em 0;
 }
 
 h2 {
   font-size: var(--text-xl);
   letter-spacing: -0.015em;
-  margin: 2em 0 1em;
+  line-height: 1.2;
+  margin: 1.8em 0 0.6em;
 
   text-decoration: underline solid currentColor 2px;
 }
@@ -59,6 +61,10 @@ h2 {
 h3 {
   font-size: var(--text-lg);
   margin: 2em 0 1em;
+}
+
+p {
+  margin: 1.5em 0;
 }
 
 em {
@@ -84,12 +90,12 @@ a[href]:hover {
 ul {
   padding-left: 0;
   list-style: '❯   ' outside;
-  margin: 2em 0;
+  margin: 1.5em 0;
 }
 
 ul > li,
 ol > li {
-  margin-bottom: 0.5em;
+  margin-bottom: 0.75em;
 }
 
 /* === Code styling ========================================================= */
@@ -106,7 +112,7 @@ code {
 
 pre {
   font-size: var(--text-code);
-  margin: 2em 0 3em;
+  margin: 3em 0;
   padding: 1em 0 1em 1.5em;
 
   border: 2px solid currentColor;
@@ -177,3 +183,28 @@ div.note > * {
   background-color: var(--text);
   color: var(--bg);
 }
+
+// debug
+/*
+main {
+  position: relative;
+}
+
+main::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  background: repeating-linear-gradient(
+    to bottom,
+    rgba(255, 0, 0, 0.3) 0em,
+    rgba(255, 0, 0, 0.3) 1.5em,
+    rgba(255, 0, 0, 0) 1.5em,
+    rgba(255, 0, 0, 0) 3em
+  );
+  pointer-events: none;
+}
+//*/
