--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,6 +5,7 @@
 @import './elements/input-range.scss';
 @import './elements/button.scss';
 @import './elements/checkbox.scss';
+@import './elements/progress.scss';
 
 *,
 *::before,
