--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -68,10 +68,6 @@ p {
   margin: 1.5em 0;
 }
 
-em {
-  letter-spacing: 0.03em;
-}
-
 /* === Link styling ========================================================= */
 a[href] {
   color: var(--text-light);
@@ -103,12 +99,17 @@ ol > li {
 
 code {
   font-family: "IBM Plex Mono", monospace;
+  font-style: italic;
   color: var(--a500);
   background-color: var(--h100);
   border-radius: var(--radius);
 
   margin: 0 -0.1em -0.1em;
   padding: 0 0.25em 0.1em;
+}
+
+em code {
+  color: var(--text);
 }
 
 pre {
@@ -125,6 +126,7 @@ pre {
 
 pre > code {
   color: var(--text-light);
+  font-style: normal;
   background-color: transparent;
 
   margin: 0 1.5em 0 0;
