--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -9,7 +9,7 @@
   --bg-o75: hsla(0, 0%, 100%, 0.75);
   --text: hsla(235, 50%, 8%, 0.9);
   --text-light: hsla(215, 32%, 8%, 0.72);
-  --a500: hsla(25, 90%, 30%, 0.95);
+  --a500: hsl(25, 95%, 30%);
   --h100: hsl(205, 22%, 92%);
   --h300: hsl(205, 22%, 82%);
 
@@ -48,7 +48,7 @@
   --bg-o75: hsla(235, 22%, 8%, 0.75);
   --text: hsla(0, 0%, 100%, 0.95);
   --text-light: hsla(0, 0%, 100%, 0.77);
-  --a500: hsla(40, 85%, 55%, 0.95);
+  --a500: hsl(35, 85%, 55%);
   --h100: hsl(220, 22%, 16%);
   --h300: hsl(215, 34%, 28%);
 }
