--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -7,9 +7,11 @@
   /* === Color theme ======================================================== */
   --bg: hsl(0, 0%, 100%);
   --bg-o75: hsla(0, 0%, 100%, 0.75);
-  --text: hsla(235, 50%, 8%, 0.9);
-  --text-light: hsla(215, 32%, 8%, 0.72);
-  --a500: hsl(25, 95%, 30%);
+  --text: hsla(235, 18%, 12%, 0.9);
+  --text-light: hsla(215, 10%, 8%, 0.72);
+  --a100: hsla(345, 90%, 30%, 0.1);
+  --a300: hsla(345, 90%, 30%, 0.25);
+  --a500: hsl(345, 90%, 30%);
   --h100: hsl(205, 22%, 92%);
   --h300: hsl(205, 22%, 82%);
 
@@ -44,11 +46,13 @@
 
 :root.dark {
   /* === Color theme ======================================================== */
-  --bg: hsl(235, 22%, 8%);
-  --bg-o75: hsla(235, 22%, 8%, 0.75);
+  --bg: hsl(235, 15%, 8%);
+  --bg-o75: hsla(235, 15%, 8%, 0.75);
   --text: hsla(0, 0%, 100%, 0.95);
   --text-light: hsla(0, 0%, 100%, 0.77);
-  --a500: hsl(35, 85%, 55%);
+  --a100: hsla(345, 82%, 58%, 0.1);
+  --a300: hsla(345, 82%, 58%, 0.25);
+  --a500: hsl(345, 82%, 58%);
   --h100: hsl(220, 22%, 16%);
   --h300: hsl(215, 34%, 28%);
 }
