Homepage and nav

--- a/components/articles/dither/DemoRandomGraph.module.scss
+++ b/components/articles/dither/DemoRandomGraph.module.scss
@@ -16,7 +16,7 @@
 }
 
 .colorPreview > div {
-  transition-duration: 50ms;
+  transition-duration: var(--anim-xs);
   border-bottom: 2px solid currentColor;
 }
 
