--- a/styles/elements/input-range.scss
+++ b/styles/elements/input-range.scss
@@ -34,8 +34,8 @@ input[type=range]::-webkit-slider-thumb {
   border-radius: 50%;
   box-shadow: 0 0 0 2px var(--bg);
   transition:
-    background-color 150ms ease-out,
-    box-shadow 150ms ease-out;
+    background-color var(--anim-s) ease-out,
+    box-shadow var(--anim-s) ease-out;
 
   transform: translateY(calc(-50% + 2px));
 
@@ -59,8 +59,8 @@ input[type=range]::-moz-range-thumb {
   border-radius: 50%;
   box-shadow: 0 0 0 2px var(--bg);
   transition:
-    background-color 150ms ease-out,
-    box-shadow 150ms ease-out;
+    background-color var(--anim-s) ease-out,
+    box-shadow var(--anim-s) ease-out;
 
   -webkit-appearance: none;
   cursor: pointer;
