--- a/styles/module/ImageGrid.module.scss
+++ b/styles/module/ImageGrid.module.scss
@@ -92,5 +92,5 @@ div.enterDone {
 .exitDone {
   transition-property: opacity, backdrop-filter;
   transition-timing-function: ease;
-  transition-duration: 250ms;
+  transition-duration: var(--anim-m);
 }
