--- a/styles/elements/checkbox.scss
+++ b/styles/elements/checkbox.scss
@@ -41,9 +41,9 @@ input[type=checkbox] + .toggle-slider::after {
   border-radius: 0.5em;
   box-shadow: 0 0 0 2px var(--bg);
 
-  transition: transform 250ms cubic-bezier(.59,-0.22,0,1.34),
-    background-color 150ms ease-out,
-    box-shadow 150ms ease-out;
+  transition: transform var(--anim-m) cubic-bezier(.59,-0.22,0,1.34),
+    background-color var(--anim-s) ease-out,
+    box-shadow var(--anim-s) ease-out;
 }
 
 input[type=checkbox] + .toggle-slider:hover::after {
