--- a/styles/module/ExpandToggle.module.scss
+++ b/styles/module/ExpandToggle.module.scss
@@ -16,7 +16,7 @@
 
   transform: translateX(0) scale(1);
   transition:
-    transform 350ms cubic-bezier(.59,-0.22,0,1.34) 0ms;
+    transform var(--anim-l) cubic-bezier(.59,-0.22,0,1.34) 0ms;
 }
 
 .expandToggle:not(.toggled) > span {
