--- a/styles/module/FontToggle.module.scss
+++ b/styles/module/FontToggle.module.scss
@@ -11,8 +11,8 @@
   font-weight: 450;
 
   transition:
-    transform 350ms cubic-bezier(0, 0, 0, 1.25) 0ms,
-    color 150ms ease-out 0ms;
+    transform var(--anim-l) cubic-bezier(0, 0, 0, 1.25) 0ms,
+    color var(--anim-s) ease-out 0ms;
 }
 
 .sans {
