--- a/styles/module/Settings.module.scss
+++ b/styles/module/Settings.module.scss
@@ -28,9 +28,9 @@
 
   transform-origin: center;
   transition:
-    transform 250ms cubic-bezier(.28,.95,.53,1.31),
-    background-color 150ms ease-out,
-    box-shadow 150ms ease-out;
+    transform var(--anim-m) cubic-bezier(.28,.95,.53,1.31),
+    background-color var(--anim-s) ease-out,
+    box-shadow var(--anim-s) ease-out;
   transform: scale(1);
 
   position: relative;
@@ -53,7 +53,7 @@
   font-weight: 450;
 
   pointer-events: none;
-  transition: opacity 150ms ease-out;
+  transition: opacity var(--anim-s) ease-out;
   opacity: 0;
 
   @media (hover: none) {
