--- a/styles/module/ThemeToggle.module.scss
+++ b/styles/module/ThemeToggle.module.scss
@@ -1,6 +1,6 @@
 .themeToggle * {
   transform-origin: center;
-  transition: transform 350ms cubic-bezier(0, 0, 0, 1.25) 150ms;
+  transition: transform var(--anim-l) cubic-bezier(0, 0, 0, 1.25) var(--anim-s);
 }
 
 .themeToggle.toggled .themeToggleCircle {
