--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -37,11 +37,26 @@
     --text-base: 1.25rem;
     --text-code: 1.125rem;
   }
+  
+  /* === Animation timings ================================================== */
+  --anim-xs: 50ms;
+  --anim-s: 150ms;
+  --anim-m: 250ms;
+  --anim-l: 350ms;
 
   /* === Misc. styles ======================================================= */
-
-  --radius: 4px;
+  --radius: 2px;
   --radius-sm: 1px;
+
+  --padding: 2rem;
+
+  @include respond-up("tablet-sm") {
+    --padding: 4rem;
+  }
+
+  @include respond-up("desktop") {
+    --padding: 8rem;
+  }
 }
 
 :root.dark {
@@ -57,6 +72,6 @@
   --h300: hsl(215, 34%, 28%);
 }
 
-:root.serif {
+:root.serif article {
   font-family: "IBM Plex Serif", serif;
 }
