--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -47,6 +47,7 @@
   --anim-s: 150ms;
   --anim-m: 250ms;
   --anim-l: 350ms;
+  --anim-xl: 500ms;
 
   /* === Misc. styles ======================================================= */
   --radius: 2px;
