--- a/styles/module/Common.module.scss
+++ b/styles/module/Common.module.scss
@@ -3,6 +3,9 @@
 /* === Layout styling ======================================================= */
 .layoutRoot {
   min-height: 100vh;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: auto auto 1fr auto;
 }
 
 .mainContent {
