Refactored demo components to use a common base

--- a/styles/module/Common.module.scss
+++ b/styles/module/Common.module.scss
@@ -46,7 +46,7 @@
 
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start; // Oh shut up about start having limited support
 }
 
 .bigLinks a[href] {
