--- a/styles/module/Common.module.scss
+++ b/styles/module/Common.module.scss
@@ -6,6 +6,8 @@
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: auto auto 1fr auto;
+
+  padding-bottom: 8em;
 }
 
 .mainContent {
@@ -55,11 +57,7 @@
   line-height: 1;
   letter-spacing: -0.03em;
   padding: 0;
-  margin-bottom: 0.5em;
-  
-  @include respond-up('tablet-sm') {
-    margin-bottom: 0.375em;
-  }
+  margin: 0 0 0.5em;
 
   background: none;
   color: var(--text);
