--- a/styles/elements/button.scss
+++ b/styles/elements/button.scss
@@ -2,7 +2,7 @@ button {
   font: inherit;
   color: inherit;
 
-  font-family: 'IBM Plex Mono', monospace;
+  font-family: inherit;
   font-weight: 700;
   letter-spacing: 0.08em;
 
@@ -12,10 +12,14 @@ button {
   padding: 0.5em 1.5em;
 }
 
-button:hover {
+button:not(:disabled):hover {
   background-color: var(--h100);
 }
 
 button:not(:disabled) {
   cursor: pointer;
+}
+
+button:disabled {
+  color: var(--text-light);
 }
