--- a/styles/elements/button.scss
+++ b/styles/elements/button.scss
@@ -16,6 +16,11 @@ button:not(:disabled):hover {
   background-color: var(--h100);
 }
 
+button:not(:disabled):focus-visible {
+  border-color: var(--a500);
+  outline: none;
+}
+
 button:not(:disabled) {
   cursor: pointer;
 }
