--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -32,6 +32,10 @@ body {
   overflow-x: hidden;
 }
 
+:focus-visible {
+  outline: 2px solid var(--a500);
+}
+
 /* === Heading & Text styling =============================================== */
 
 h1 {
