--- a/styles/elements/checkbox.scss
+++ b/styles/elements/checkbox.scss
@@ -1,5 +1,11 @@
 input[type=checkbox] {
-  display: none;
+  width: 0;
+  height: 0;
+  margin: 0;
+
+  border: none;
+  background: transparent;
+  opacity: 0;
 }
 
 input[type=checkbox] + .toggle-slider {
@@ -52,4 +58,16 @@ input[type=checkbox] + .toggle-slider:hover::after {
 
 input[type=checkbox]:checked + .toggle-slider::after {
   transform: translateX(calc(var(--size) - 100%));
+}
+
+input[type=checkbox]:focus-visible + .toggle-slider {
+  color: var(--a500);
+}
+
+input[type=checkbox]:focus-visible + .toggle-slider::after {
+  transform: scale(1.1);
+}
+
+input[type=checkbox]:focus-visible:checked + .toggle-slider::after {
+  transform: translateX(calc(var(--size) - 100%)) scale(1.1);
 }
