--- a/styles/elements/input-range.scss
+++ b/styles/elements/input-range.scss
@@ -9,6 +9,19 @@ input[type=range] {
   -webkit-appearance: none;
 }
 
+input[type=range]:focus-visible {
+  color: var(--a500);
+  outline: none;
+}
+
+input[type=range]:focus-visible::-webkit-slider-thumb {
+  transform: translateY(calc(-50% + 2px)) scale(1.1);
+}
+
+input[type=range]:focus-visible::-moz-range-thumb {
+  transform: scale(1.1);
+}
+
 input[type=range]::-webkit-slider-runnable-track {
   height: 2px;
   width: 100%;
@@ -34,6 +47,7 @@ input[type=range]::-webkit-slider-thumb {
   border-radius: 50%;
   box-shadow: 0 0 0 2px var(--bg);
   transition:
+    transform var(--anim-m) cubic-bezier(.59,-0.22,0,1.34),
     background-color var(--anim-s) ease-out,
     box-shadow var(--anim-s) ease-out;
 
@@ -59,6 +73,7 @@ input[type=range]::-moz-range-thumb {
   border-radius: 50%;
   box-shadow: 0 0 0 2px var(--bg);
   transition:
+    transform var(--anim-m) cubic-bezier(.59,-0.22,0,1.34),
     background-color var(--anim-s) ease-out,
     box-shadow var(--anim-s) ease-out;
 
