--- a/styles/module/Common.module.scss
+++ b/styles/module/Common.module.scss
@@ -56,6 +56,7 @@
   font-weight: 700;
   line-height: 1;
   letter-spacing: -0.03em;
+
   padding: 0;
   margin: 0 0 0.5em;
 
@@ -68,7 +69,9 @@
   transition-duration: var(--anim-m);
 }
 
-.bigLinks a[href]:hover {
+.bigLinks a[href]:hover,
+.bigLinks a[href]:focus-visible {
+  outline: none;
   color: var(--a500);
   padding-left: 0.25em;
   transform: scale(1.1);
