added heading links on hover

--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -9,6 +9,7 @@
   --bg-o75: hsla(0, 0%, 100%, 0.75);
   --text: hsla(235, 18%, 12%, 0.9);
   --text-light: hsla(215, 10%, 8%, 0.72);
+  --text-lighter: hsla(215, 10%, 8%, 0.22);
   --a100: hsla(345, 90%, 30%, 0.1);
   --a300: hsla(345, 90%, 30%, 0.25);
   --a500: hsl(345, 90%, 30%);
@@ -70,6 +71,7 @@
   --bg-o75: hsla(235, 15%, 8%, 0.75);
   --text: hsla(0, 0%, 100%, 0.95);
   --text-light: hsla(0, 0%, 100%, 0.77);
+  --text-lighter: hsla(0, 0%, 100%, 0.25);
   --a100: hsla(345, 82%, 58%, 0.1);
   --a300: hsla(345, 82%, 58%, 0.25);
   --a500: hsl(345, 82%, 58%);
