--- a/styles/module/ImageGrid.module.scss
+++ b/styles/module/ImageGrid.module.scss
@@ -160,6 +160,7 @@
   font-weight: 700;
   letter-spacing: 0;
   text-align: left;
+  text-decoration: none;
 
   border: none;
   background: none;
