--- a/styles/module/Common.module.scss
+++ b/styles/module/Common.module.scss
@@ -56,6 +56,7 @@
   font-weight: 700;
   line-height: 1;
   letter-spacing: -0.03em;
+  text-decoration: none;
 
   padding: 0;
   margin: 0 0 0.5em;
