--- a/styles/module/ProjectLayout.module.scss
+++ b/styles/module/ProjectLayout.module.scss
@@ -13,6 +13,8 @@
   font-weight: 700;
   line-height: 1;
   letter-spacing: -0.015em;
+  text-decoration: none;
+
   padding: 0;
   margin: 0 0 0.5em;
 
